# GayPRixhg

./: Cargo.toml  app.json  readme.md  run.sh
src/: cert.pem  key.pem  main.rs
src/public/: app.js  index.html  sw.js
