[package]
name = "v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
surf = "2.3.2"
base64 = "0.13.0"
url = "1.6.0"
tide-rustls = "0.3.0"
http-types = "2.12.0"
tide-compress = "0.9.0"
percent-encoding = "2.1.0"